--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="UTF-8">
         <meta name="autorius" content="Emilis Rasiulis">
-        <title>LD8</title>
+        <title>Skriptinio programavimo laboratorinis darbas</title>
     </head>
 
     <body>
