--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" type="text/css" href="print.css">
+        <link rel="stylesheet" type="text/css" href="svg.css">
         <!-- Soc. tinklų ikonų biblioteka -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="UTF-8">
@@ -25,10 +26,58 @@
                 <img src="foto/as.JPG" alt="Nuotrauka nerasta" width="240" height="320">
             </div>
             <div class="soc-tinklai">
-                <a href="https://www.facebook.com" class="facebook" target="_blank">Veidaknygė</a>
-                <a href="https://twitter.com" class="twitter-icon" target="_blank">Twitter</a>
-                <a href="https://www.linkedin.com/in/emilis-rasiulis-09b099247/" class="linkedin" target="_blank">LinkedIn</a>
-                <a href="https://www.instagram.com/" class="instagram" target="_blank">Instagram</a>
+                <a href="https://www.facebook.com" class="facebook" target="_blank">Veidaknygė
+                    <svg width="35" height="25" viewBox="0 0 35 25" fill="none">
+                        <g id="trikampis">
+                            <g id="sviesus">
+                                <polygon id="sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
+                            </g>
+                            <g id="tamsus">
+                                <polygon id="tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
+                                <polygon id="tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
+                            </g>
+                        </g> 
+                    </svg>
+                </a>
+                <a href="https://twitter.com" class="twitter-icon" target="_blank">Twitter
+                    <svg width="35" height="25" viewBox="0 0 35 25" fill="none">
+                        <g id="trikampis">
+                            <g id="sviesus">
+                                <polygon id="sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
+                            </g>
+                            <g id="tamsus">
+                                <polygon id="tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
+                                <polygon id="tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
+                            </g>
+                        </g> 
+                    </svg>
+                </a>
+                <a href="https://www.linkedin.com/in/emilis-rasiulis-09b099247/" class="linkedin" target="_blank">LinkedIn
+                    <svg width="35" height="25" viewBox="0 0 35 25" fill="none">
+                        <g id="trikampis">
+                            <g id="sviesus">
+                                <polygon id="sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
+                            </g>
+                            <g id="tamsus">
+                                <polygon id="tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
+                                <polygon id="tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
+                            </g>
+                        </g> 
+                    </svg>
+                </a>
+                <a href="https://www.instagram.com/" class="instagram" target="_blank">Instagram
+                    <svg width="35" height="25" viewBox="0 0 35 25" fill="none">
+                        <g id="trikampis">
+                            <g id="sviesus">
+                                <polygon id="sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
+                            </g>
+                            <g id="tamsus">
+                                <polygon id="tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
+                                <polygon id="tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
+                            </g>
+                        </g> 
+                    </svg>
+                </a>
             </div>
         </header>
 
