--- a/index.html
+++ b/index.html
@@ -144,6 +144,36 @@
             <video src="video/video.mp4" width="420" height="320" controls muted class="video"></video><br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/_7YP4GVRvK8?si=ECiqykgWn1y4hbtw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="iframe"></iframe>
         </section>
+
+        <section id="formule" class="formule"> 
+            <p>Matematinė funkcija :</p>
+            <p class="math">
+                <math display='block'>
+                    <semantics>
+                     <mrow>
+                      <mstyle displaystyle='true'>
+                       <mrow>
+                        <munder>
+                         <mo>&#x222B;</mo>
+                         <mi>D</mi>
+                        </munder>
+                        <mrow>
+                         <mo stretchy='false'>(</mo><mo>&#x2207;</mo><mo>*</mo><mi>F</mi><mo stretchy='false'>)</mo><mi>d</mi><mi>V</mi><mo>=</mo><mstyle displaystyle='true'>
+                          <mrow>
+                           <munder>
+                            <mo>&#x222B;</mo>
+                            <mrow>
+                             <mi>&#x03B4;</mi><mi>D</mi></mrow>
+                           </munder>
+                           <mrow>
+                            <mi>F</mi><mo>*</mo><mi>n</mi><mi>d</mi><mi>S</mi></mrow>
+                          </mrow>
+                         </mstyle></mrow>
+                       </mrow>
+                      </mstyle></mrow>
+                    </semantics>
+                   </math>
+        </section>
         
         <footer>
             <div class="footer">
