--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                     </svg>
                 </a>
             </div>
+            <h2 class="tekstas-virs-laikrodzio">Šiuo metu Lietuvoje</h2>
+            <div class="laikrodis" id="laikrodis">
+                <script src="script.js"></script>
         </header>
 
 
