Kontaktu formos griauciai

--- a/index.html
+++ b/index.html
@@ -28,52 +28,52 @@
             <div class="soc-tinklai">
                 <a href="https://www.facebook.com" class="facebook" target="_blank">Veidaknygė
                     <svg width="35" height="25" viewBox="0 0 35 25" fill="none">
-                        <g id="trikampis">
-                            <g id="sviesus">
-                                <polygon id="sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
+                        <g id="fb-trikampis">
+                            <g id="fb-sviesus">
+                                <polygon id="fb-sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
                             </g>
-                            <g id="tamsus">
-                                <polygon id="tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
-                                <polygon id="tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
+                            <g id="fb-tamsus">
+                                <polygon id="fb-tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
+                                <polygon id="fb-tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
                             </g>
                         </g> 
                     </svg>
                 </a>
                 <a href="https://twitter.com" class="twitter-icon" target="_blank">Twitter
                     <svg width="35" height="25" viewBox="0 0 35 25" fill="none">
-                        <g id="trikampis">
-                            <g id="sviesus">
-                                <polygon id="sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
+                        <g id="twt-trikampis">
+                            <g id="twt-sviesus">
+                                <polygon id="twt-sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
                             </g>
-                            <g id="tamsus">
-                                <polygon id="tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
-                                <polygon id="tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
+                            <g id="twt-tamsus">
+                                <polygon id="twt-tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
+                                <polygon id="twt-tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
                             </g>
                         </g> 
                     </svg>
                 </a>
                 <a href="https://www.linkedin.com/in/emilis-rasiulis-09b099247/" class="linkedin" target="_blank">LinkedIn
                     <svg width="35" height="25" viewBox="0 0 35 25" fill="none">
-                        <g id="trikampis">
-                            <g id="sviesus">
-                                <polygon id="sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
+                        <g id="ln-trikampis">
+                            <g id="ln-sviesus">
+                                <polygon id="ln-sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
                             </g>
-                            <g id="tamsus">
-                                <polygon id="tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
-                                <polygon id="tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
+                            <g id="ln-tamsus">
+                                <polygon id="ln-tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
+                                <polygon id="ln-tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
                             </g>
                         </g> 
                     </svg>
                 </a>
                 <a href="https://www.instagram.com/" class="instagram" target="_blank">Instagram
                     <svg width="35" height="25" viewBox="0 0 35 25" fill="none">
-                        <g id="trikampis">
-                            <g id="sviesus">
-                                <polygon id="sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
+                        <g id="ig-trikampis">
+                            <g id="ig-sviesus">
+                                <polygon id="ig-sviesus1" opacity="0.6" points="0,12 20,0 20,25 0,12" ></polygon> 
                             </g>
-                            <g id="tamsus">
-                                <polygon id="tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
-                                <polygon id="tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
+                            <g id="ig-tamsus">
+                                <polygon id="ig-tamsus1" opacity="0.8" points="6,12 25,0 25,25 6,12" ></polygon>    
+                                <polygon id="ig-tamsus2" opacity="0.8" points="0,12 20,0 20,25 0,12" ></polygon>  
                             </g>
                         </g> 
                     </svg>
@@ -82,6 +82,7 @@
             <h2 class="tekstas-virs-laikrodzio">Šiuo metu Lietuvoje</h2>
             <div class="laikrodis" id="laikrodis">
                 <script src="script.js"></script>
+            </div>    
         </header>
 
 
@@ -176,6 +177,44 @@
                       </mstyle></mrow>
                     </semantics>
                    </math>
+        </section>
+
+        <section>
+            <fieldset>
+                <legend>Paslaugų užsakymo forma</legend>
+                <form action="clark.png">
+                    <p>
+                        <label id="fname">Vardas: <br><input type="text" name="fname" id="fname-input" placeholder="Jonas" required></label>
+                    </p>
+                    <p>
+                        <label id="lname">Pavardė: <br><input type="text" name="lname" id="lname-input" placeholder="Jonaitis" required></label>
+                    </p>
+                    <p>
+                        <label>El. pašto adresas: <br><input type="email" name="email" id="email" placeholder="jonasjonaitis@vgtu.com" required></label>
+                    </p>
+                    <p>
+                        <label>Telefono numeris: <br><input type="tel" name="phone" id="phone" placeholder="+370 123 45678" pattern="+[0-9]{3}-[0-9]{3}-[0-9]{5}" required></label>
+                    </p>
+                    <p>
+                        <label>Paslaugų atlikimo data: <br><input type="date" name="date" id="date" required></label>
+                    </p>
+                    <p>
+                        <label>Adresas</label><br>
+                        <input type="text" id="adress" name="adress" placeholder="Saulėtekio al. 11" required><br>
+                        <label>Pašto kodas</label><br>
+                        <input type="number" id="postal" name="postal" placeholder="10223" required><br>
+                        <!-- <textarea name="adress" id="adress" rows="3" cols="40" placeholder="Centrinių rūmų valgykla,&#10;Saulėtekio al. 11, 10223 Vilnius" required></textarea> -->
+                        <label for="city">Miestas</label><br>
+                        <input type="text" id="city" name="city" placeholder="Vilnius" required><br>
+                        <label for="country">Šalis</label><br>
+                        <input type="text" id="country" name="country" placeholder="Lietuva" required><br>
+                    </p>
+                    <p>
+                        <button id="submit" type="submit">Submit</button>
+                        <button id="reset" type="reset">Reset</button>
+                    </p>
+                </form>
+            </fieldset>
         </section>
         
         <footer>
