--- a/index.html
+++ b/index.html
@@ -179,41 +179,69 @@
                    </math>
         </section>
 
-        <section>
+        <section id="forma" class="forma">
             <fieldset>
                 <legend>Paslaugų užsakymo forma</legend>
-                <form action="clark.png">
+                <form class="myForm" id="myForm">
                     <p>
-                        <label id="fname">Vardas: <br><input type="text" name="fname" id="fname-input" placeholder="Jonas" required></label>
+                        <label class="formaLabel" for="fname">Vardas </label><br>
+                        <input type="text" name="fname" id="fname" placeholder="Jonas" required>
                     </p>
                     <p>
-                        <label id="lname">Pavardė: <br><input type="text" name="lname" id="lname-input" placeholder="Jonaitis" required></label>
+                        <label class="formaLabel" for="lname">Pavardė </label><br>
+                        <input type="text" name="lname" id="lname" placeholder="Jonaitis" required>
                     </p>
                     <p>
-                        <label>El. pašto adresas: <br><input type="email" name="email" id="email" placeholder="jonasjonaitis@vgtu.com" required></label>
+                        <label class="formalabel" for="email">El. pašto adresas </label><br>
+                        <input type="email" name="email" id="email" placeholder="jonasjonaitis@vgtu.com" required>
                     </p>
                     <p>
-                        <label>Telefono numeris: <br><input type="tel" name="phone" id="phone" placeholder="+370 123 45678" pattern="+[0-9]{3}-[0-9]{3}-[0-9]{5}" required></label>
+                        <label class="formalabel" for="phone">Telefono numeris </label><br>
+                        <input type="tel" name="phone" id="phone" placeholder="+370 123 45678" required>
                     </p>
                     <p>
-                        <label>Paslaugų atlikimo data: <br><input type="date" name="date" id="date" required></label>
+                        <label class="formalabel" for="date">Paslaugų atlikimo data </label><br>
+                        <input type="date" name="date" id="date" required>
                     </p>
                     <p>
-                        <label>Adresas</label><br>
+                        <label class="formalabel" for="adress">Adresas </label><br>
                         <input type="text" id="adress" name="adress" placeholder="Saulėtekio al. 11" required><br>
-                        <label>Pašto kodas</label><br>
+
+                        <label class="formalabel" for="postal">Pašto kodas </label><br>
                         <input type="number" id="postal" name="postal" placeholder="10223" required><br>
-                        <!-- <textarea name="adress" id="adress" rows="3" cols="40" placeholder="Centrinių rūmų valgykla,&#10;Saulėtekio al. 11, 10223 Vilnius" required></textarea> -->
-                        <label for="city">Miestas</label><br>
+
+                        <label class="formalabel" for="city">Miestas </label><br>
                         <input type="text" id="city" name="city" placeholder="Vilnius" required><br>
-                        <label for="country">Šalis</label><br>
+
+                        <label class="formalabel" for="country">Šalis </label><br>
                         <input type="text" id="country" name="country" placeholder="Lietuva" required><br>
                     </p>
                     <p>
-                        <button id="submit" type="submit">Submit</button>
-                        <button id="reset" type="reset">Reset</button>
+                        <label class="formalabel" for="internet-speed">Koks jūsų interneto greitis? </label><br>
+                        <input type="number" id="internet-speed" name="internet-speed" placeholder="Mbit"><br>
+                    </p>
+                    <p>
+                        <label class="formalabel" for="internet-socket">Kiek internetinių rozečių yra jūsų namuose? </label><br>
+                        <input type="number" id="internet-socket" name="internet-socket"><br>
+                    </p>
+                    <p>
+                        <label class="formalabel" for="internet-price">Kiek mokate už interneto paslaugas? </label><br>
+                        <input type="number" id="internet-price" name="internet-price" placeholder="€/mėn"><br>
+                    </p>
+                    <p>
+                        <label class="formalabel" for="internet-quality">Kaip vertinate savo interneto tiekėjo teikiamų paslaugų kokybę? </label><br>
+                        <input type="number" id="internet-quality" name="internet-quality" placeholder="0-10"><br>
+                    </p>
+                    <p>
+                        <label class="formalabel" for="internet-safety">Kaip saugiai jaučiatės naršant internete? </label><br>
+                        <input type="number" id="internet-safety" name="internet-safety" placeholder="0-10"><br>
+                    </p>
+                    <p>
+                        <button id="submit" type="submit">Pateikti</button>
+                        <button id="reset" type="reset">Atstatyti</button>
                     </p>
                 </form>
+                <div class="results" id="results"></div>
             </fieldset>
         </section>
         
