--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
                     </p>
                     <p>
                         <label class="formalabel" for="internet-speed">Koks jūsų interneto greitis? </label><br>
-                        <input type="number" id="internet-speed" name="internet-speed" placeholder="Mbit"><br>
+                        <input type="number" id="internet-speed" name="internet-speed" placeholder="Mbit/s"><br>
                     </p>
                     <p>
                         <label class="formalabel" for="internet-socket">Kiek internetinių rozečių yra jūsų namuose? </label><br>
-                        <input type="number" id="internet-socket" name="internet-socket"><br>
+                        <input type="number" id="internet-socket" name="internet-socket" placeholder="... rozečių"><br>
                     </p>
                     <p>
                         <label class="formalabel" for="internet-price">Kiek mokate už interneto paslaugas? </label><br>
